kernel/events: Allow numFDs greater than max FDs in select().

So long as the numFDs is <= FD_SETSIZE, anyway.

Fixes #19220.